@@ -45,19 +45,19 @@ public class FunctionTest extends TestmodelTest
 	{
 		assertEquals("5ffff", item1.getMin4());
 		assertEquals("5FFFF", item1.getMin4Upper());
-		assertEquals(new Integer(5), item1.getMin4UpperLength());
+		assertEquals(Integer.valueOf(5), item1.getMin4UpperLength());
 		assertEquals("4ddd", item1.getMax4());
 		assertEquals("4DDD", item1.getMax4Upper());
-		assertEquals(new Integer(4), item1.getMax4UpperLength());
-		assertEquals(new Integer(9), item1.getMin4AndMax4UpperLength());
+		assertEquals(Integer.valueOf(4), item1.getMax4UpperLength());
+		assertEquals(Integer.valueOf(9), item1.getMin4AndMax4UpperLength());
 
 		assertEquals("6ggggg", item2.getMin4());
 		assertEquals("6GGGGG", item2.getMin4Upper());
-		assertEquals(new Integer(6), item2.getMin4UpperLength());
+		assertEquals(Integer.valueOf(6), item2.getMin4UpperLength());
 		assertEquals("2b", item2.getMax4());
 		assertEquals("2B", item2.getMax4Upper());
-		assertEquals(new Integer(2), item2.getMax4UpperLength());
-		assertEquals(new Integer(8), item2.getMin4AndMax4UpperLength());
+		assertEquals(Integer.valueOf(2), item2.getMax4UpperLength());
+		assertEquals(Integer.valueOf(8), item2.getMin4AndMax4UpperLength());
 		
 		assertContains(item1, item1.TYPE.search(item1.min4.equal("5ffff")));
 		assertContains(item1, item1.TYPE.search(item1.min4Upper.equal("5FFFF")));
@@ -67,8 +67,8 @@ public class FunctionTest extends TestmodelTest
 		assertContains(item1, item1.TYPE.search(item1.min4Upper.length().sum(item1.max4Upper.length()).equal(9)));
 		
 		assertContains(
-				list("5ffff",  "5FFFF",  new Integer(5), "4ddd", "4DDD", new Integer(4), new Integer(9), new Integer(9)),
-				list("6ggggg", "6GGGGG", new Integer(6), "2b",   "2B",   new Integer(2), new Integer(8), new Integer(8)),
+				list("5ffff",  "5FFFF",  Integer.valueOf(5), "4ddd", "4DDD", Integer.valueOf(4), Integer.valueOf(9), Integer.valueOf(9)),
+				list("6ggggg", "6GGGGG", Integer.valueOf(6), "2b",   "2B",   Integer.valueOf(2), Integer.valueOf(8), Integer.valueOf(8)),
 				new Query(new Function[]{
 						item1.min4, item1.min4Upper, item1.min4UpperLength,
 						item1.max4, item1.max4Upper, item1.max4UpperLength,
