@@ -53,9 +53,9 @@ public class VectorItem extends Item
 	public VectorItem(final int initialNum1, final int initialNum2, final int initialNum3)
 	{
 		super(new AttributeValue[]{
-			new AttributeValue(num1,new Integer(initialNum1)),
-			new AttributeValue(num2,new Integer(initialNum2)),
-			new AttributeValue(num3,new Integer(initialNum3)),
+			new AttributeValue(num1,Integer.valueOf(initialNum1)),
+			new AttributeValue(num2,Integer.valueOf(initialNum2)),
+			new AttributeValue(num3,Integer.valueOf(initialNum3)),
 		});
 	}
 
